Skills section mobile bug fixed

--- a/src/Components/Skills/Skills.module.css
+++ b/src/Components/Skills/Skills.module.css
@@ -137,10 +137,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 4vw;
   }
 
   .skillLogo {
-    height: 4vh;
-    width: 4vh;
+    height: 5vw;
+    width: 5vw;
   }
 }
